taking advantage of cmake's build types, setting Release as default build type
you can override the default build type by specifying it with -DCMAKE_BUILD_TYPE=<build_type>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,14 @@ cmake_minimum_required(VERSION 2.8)
 
 project(json)
 
-set(CMAKE_CXX_FLAGS "-O3")
+if(NOT CMAKE_BUILD_TYPE)
+	set(
+		CMAKE_BUILD_TYPE Release
+		CACHE STRING
+		"Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel."
+		FORCE
+)
+endif()
 
 include(CheckCXXCompilerFlag)
 CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
