added possibility to unescape each JSONEscapeCharacter, not allowed by lexer yet

--- a/ut/CMakeLists.txt
+++ b/ut/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(
 	ut.json
 
 	unescapeescapecharactertest.cc
+	unescapejsonescapecharactertest.cc
 	valuetest.cc
 	parsefiletest.cc
 	testmain.cc
