added function to unescape escaped unicode

--- a/ut/CMakeLists.txt
+++ b/ut/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(
 
 	unescapeescapecharactertest.cc
 	unescapejsonescapecharactertest.cc
+	unescapeunicodeescapesequencetest.cc
 	valuetest.cc
 	parsefiletest.cc
 	testmain.cc
