--- a/msvc/json/json/json.vcxproj.filters
+++ b/msvc/json/json/json.vcxproj.filters
@@ -52,7 +52,9 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="..\..\..\json.l" />
-    <CustomBuild Include="..\..\..\json.y" />
+    <Bison Include="..\..\..\json.y" />
+  </ItemGroup>
+  <ItemGroup>
+    <Flex Include="..\..\..\json.l" />
   </ItemGroup>
 </Project>
